DDQN Model RSU and Vehicle Initialization Logic updated

--- a/Reference Code/DQN_Task_Offloading.ipynb
+++ b/Reference Code/DQN_Task_Offloading.ipynb
@@ -1,33 +1,21 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "Importing The Libraries"
-      ],
       "metadata": {
         "id": "jolLt2UvU5Ri"
-      }
+      },
+      "source": [
+        "Importing The Libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nGdyUS7-XFGg"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import random\n",
@@ -36,24 +24,24 @@
         "import gym\n",
         "from gym import spaces\n",
         "import matplotlib.pyplot as plt"
-      ],
-      "metadata": {
-        "id": "nGdyUS7-XFGg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Defining Simulation Parameters\n"
-      ],
       "metadata": {
         "id": "pjEh1GBgXNFb"
-      }
+      },
+      "source": [
+        "Defining Simulation Parameters\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "W__-PfdyXSYk"
+      },
+      "outputs": [],
       "source": [
         "# Simulation Parameters (Defined as per research paper)\n",
         "NUM_VEHICLES = 80\n",
@@ -72,24 +60,24 @@
         "BATCH_SIZE = 32\n",
         "UPDATE_TARGET_EVERY = 50\n",
         "EPISODES = 256\n"
-      ],
-      "metadata": {
-        "id": "W__-PfdyXSYk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Method to calculate Energy Consumption and Delay"
-      ],
       "metadata": {
         "id": "cFKgUgXFXi8H"
-      }
+      },
+      "source": [
+        "Method to calculate Energy Consumption and Delay"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qzcxOIbdXncA"
+      },
+      "outputs": [],
       "source": [
         "# Function to calculate energy consumption\n",
         "def calculate_energy(cpu_cycles, cpu_frequency):\n",
@@ -98,24 +86,24 @@
         "# Function to calculate delay\n",
         "def calculate_delay(task_size, bandwidth):\n",
         "    return task_size / bandwidth"
-      ],
-      "metadata": {
-        "id": "qzcxOIbdXncA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Method To build Model"
-      ],
       "metadata": {
         "id": "e6XFZDvlXzhr"
-      }
+      },
+      "source": [
+        "Method To build Model"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hEgPhGOMX2Yb"
+      },
+      "outputs": [],
       "source": [
         "def build_model(state_size, action_size):\n",
         "    inputs = Input(shape=(state_size,))\n",
@@ -125,115 +113,20 @@
         "    model = tf.keras.Model(inputs=inputs, outputs=outputs)\n",
         "    model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001), loss=\"mse\")\n",
         "    return model"
-      ],
-      "metadata": {
-        "id": "hEgPhGOMX2Yb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        " To define Vehicular Offloading Environment"
-      ],
       "metadata": {
         "id": "0I6iEiAhX40R"
-      }
+      },
+      "source": [
+        " To define Vehicular Offloading Environment"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "# Step 1: Define Vehicular Offloading Environment\n",
-        "class VehicularOffloadingEnv(gym.Env):\n",
-        "    def __init__(self):\n",
-        "        super(VehicularOffloadingEnv, self).__init__()\n",
-        "\n",
-        "        self.observation_space = spaces.Box(low=np.array([VEHICLE_SPEED_RANGE[0], VEHICLE_CPU_RANGE[0], RSU_CPU_RANGE[0], 0]),\n",
-        "                                            high=np.array([VEHICLE_SPEED_RANGE[1], VEHICLE_CPU_RANGE[1], RSU_CPU_RANGE[1], COMMUNICATION_RANGE]), dtype=np.float32)\n",
-        "        self.action_space = spaces.Discrete(3)\n",
-        "        self.reset()\n",
-        "\n",
-        "    def step(self, action):\n",
-        "        delay = calculate_delay(TASK_SIZE, BANDWIDTH)\n",
-        "        energy = calculate_energy(PROCESSING_OVERHEAD * TASK_SIZE, VEHICLE_CPU_RANGE[1] if action == 0 else RSU_CPU_RANGE[1])\n",
-        "        cost = delay + energy + np.random.uniform(-0.5, 0.5)  # Adding slight randomness\n",
-        "        reward = -cost  # Minimize cost\n",
-        "        next_state = self.observation_space.sample()\n",
-        "        done = False  # Continuous scenario\n",
-        "        return next_state, reward, done, {}\n",
-        "\n",
-        "    def reset(self):\n",
-        "        return self.observation_space.sample()\n",
-        "\n",
-        "env = VehicularOffloadingEnv()\n",
-        "\n",
-        "state_size = env.observation_space.shape[0]\n",
-        "action_size = env.action_space.n\n",
-        "policy_model = build_model(state_size, action_size)\n",
-        "target_model = build_model(state_size, action_size)\n",
-        "target_model.set_weights(policy_model.get_weights())\n",
-        "\n",
-        "def update_policy():\n",
-        "    if len(replay_memory) < BATCH_SIZE:\n",
-        "        return\n",
-        "    batch = random.sample(replay_memory, BATCH_SIZE)\n",
-        "    states, actions, rewards, next_states, dones = zip(*batch)\n",
-        "    states, next_states = np.array(states), np.array(next_states)\n",
-        "\n",
-        "    q_values_next = policy_model.predict(next_states, verbose=0)\n",
-        "    q_values_target = target_model.predict(next_states, verbose=0)\n",
-        "    q_values = policy_model.predict(states, verbose=0)\n",
-        "\n",
-        "    for i in range(BATCH_SIZE):\n",
-        "        best_action = np.argmax(q_values_next[i])\n",
-        "        target = rewards[i] if dones[i] else rewards[i] + GAMMA * q_values_target[i][best_action]\n",
-        "        q_values[i][actions[i]] = target\n",
-        "\n",
-        "    policy_model.fit(states, q_values, verbose=0, batch_size=BATCH_SIZE)\n",
-        "\n",
-        "replay_memory = []\n",
-        "rewards_history = []\n",
-        "\n",
-        "for episode in range(EPISODES):\n",
-        "    state = env.reset()\n",
-        "    total_reward = 0\n",
-        "    L = TASK_SIZE\n",
-        "\n",
-        "    while L > 0:\n",
-        "        if random.random() < EPSILON:\n",
-        "            action = env.action_space.sample()\n",
-        "        else:\n",
-        "            q_values = policy_model.predict(state.reshape(1, -1), verbose=0)\n",
-        "            action = np.argmax(q_values[0])\n",
-        "\n",
-        "        next_state, reward, done, _ = env.step(action)\n",
-        "        replay_memory.append((state, action, reward, next_state, done))\n",
-        "        if len(replay_memory) > 2000:\n",
-        "            replay_memory.pop(0)\n",
-        "\n",
-        "        update_policy()\n",
-        "\n",
-        "        if episode % UPDATE_TARGET_EVERY == 0:\n",
-        "            target_model.set_weights(policy_model.get_weights())\n",
-        "\n",
-        "        L -= 1\n",
-        "        state = next_state\n",
-        "        total_reward += reward\n",
-        "        if done:\n",
-        "            break\n",
-        "\n",
-        "    rewards_history.append(total_reward)\n",
-        "    EPSILON = max(0.1, EPSILON * 0.995)\n",
-        "    print(f\"Episode {episode+1}: Total Reward = {total_reward}\")\n",
-        "\n",
-        "plt.plot(rewards_history)\n",
-        "plt.xlabel(\"Episodes\")\n",
-        "plt.ylabel(\"Total Reward\")\n",
-        "plt.title(\"DDQN Training Performance\")\n",
-        "plt.show()\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -241,11 +134,10 @@
         "id": "pBVOi_Yja4CV",
         "outputId": "a42d26df-1336-4191-cbe1-757fc6eddeb5"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Episode 1: Total Reward = -25.180805657674007\n",
             "Episode 2: Total Reward = -25.439667883956474\n",
@@ -505,7 +397,115 @@
             "Episode 256: Total Reward = -27.334534347227013\n"
           ]
         }
+      ],
+      "source": [
+        "\n",
+        "# Step 1: Define Vehicular Offloading Environment\n",
+        "class VehicularOffloadingEnv(gym.Env):\n",
+        "    def __init__(self):\n",
+        "        super(VehicularOffloadingEnv, self).__init__()\n",
+        "\n",
+        "        self.observation_space = spaces.Box(low=np.array([VEHICLE_SPEED_RANGE[0], VEHICLE_CPU_RANGE[0], RSU_CPU_RANGE[0], 0]),\n",
+        "                                            high=np.array([VEHICLE_SPEED_RANGE[1], VEHICLE_CPU_RANGE[1], RSU_CPU_RANGE[1], COMMUNICATION_RANGE]), dtype=np.float32)\n",
+        "        self.action_space = spaces.Discrete(3)\n",
+        "        self.reset()\n",
+        "\n",
+        "    def step(self, action):\n",
+        "        delay = calculate_delay(TASK_SIZE, BANDWIDTH)\n",
+        "        energy = calculate_energy(PROCESSING_OVERHEAD * TASK_SIZE, VEHICLE_CPU_RANGE[1] if action == 0 else RSU_CPU_RANGE[1])\n",
+        "        cost = delay + energy + np.random.uniform(-0.5, 0.5)  # Adding slight randomness\n",
+        "        reward = -cost  # Minimize cost\n",
+        "        next_state = self.observation_space.sample()\n",
+        "        done = False  # Continuous scenario\n",
+        "        return next_state, reward, done, {}\n",
+        "\n",
+        "    def reset(self):\n",
+        "        return self.observation_space.sample()\n",
+        "\n",
+        "env = VehicularOffloadingEnv()\n",
+        "\n",
+        "state_size = env.observation_space.shape[0]\n",
+        "action_size = env.action_space.n\n",
+        "policy_model = build_model(state_size, action_size)\n",
+        "target_model = build_model(state_size, action_size)\n",
+        "target_model.set_weights(policy_model.get_weights())\n",
+        "\n",
+        "def update_policy():\n",
+        "    if len(replay_memory) < BATCH_SIZE:\n",
+        "        return\n",
+        "    batch = random.sample(replay_memory, BATCH_SIZE)\n",
+        "    states, actions, rewards, next_states, dones = zip(*batch)\n",
+        "    states, next_states = np.array(states), np.array(next_states)\n",
+        "\n",
+        "    q_values_next = policy_model.predict(next_states, verbose=0)\n",
+        "    q_values_target = target_model.predict(next_states, verbose=0)\n",
+        "    q_values = policy_model.predict(states, verbose=0)\n",
+        "\n",
+        "    for i in range(BATCH_SIZE):\n",
+        "        best_action = np.argmax(q_values_next[i])\n",
+        "        target = rewards[i] if dones[i] else rewards[i] + GAMMA * q_values_target[i][best_action]\n",
+        "        q_values[i][actions[i]] = target\n",
+        "\n",
+        "    policy_model.fit(states, q_values, verbose=0, batch_size=BATCH_SIZE)\n",
+        "\n",
+        "replay_memory = []\n",
+        "rewards_history = []\n",
+        "\n",
+        "for episode in range(EPISODES):\n",
+        "    state = env.reset()\n",
+        "    total_reward = 0\n",
+        "    L = TASK_SIZE\n",
+        "\n",
+        "    while L > 0:\n",
+        "        if random.random() < EPSILON:\n",
+        "            action = env.action_space.sample()\n",
+        "        else:\n",
+        "            q_values = policy_model.predict(state.reshape(1, -1), verbose=0)\n",
+        "            action = np.argmax(q_values[0])\n",
+        "\n",
+        "        next_state, reward, done, _ = env.step(action)\n",
+        "        replay_memory.append((state, action, reward, next_state, done))\n",
+        "        if len(replay_memory) > 2000:\n",
+        "            replay_memory.pop(0)\n",
+        "\n",
+        "        update_policy()\n",
+        "\n",
+        "        if episode % UPDATE_TARGET_EVERY == 0:\n",
+        "            target_model.set_weights(policy_model.get_weights())\n",
+        "\n",
+        "        L -= 1\n",
+        "        state = next_state\n",
+        "        total_reward += reward\n",
+        "        if done:\n",
+        "            break\n",
+        "\n",
+        "    rewards_history.append(total_reward)\n",
+        "    EPSILON = max(0.1, EPSILON * 0.995)\n",
+        "    print(f\"Episode {episode+1}: Total Reward = {total_reward}\")\n",
+        "\n",
+        "plt.plot(rewards_history)\n",
+        "plt.xlabel(\"Episodes\")\n",
+        "plt.ylabel(\"Total Reward\")\n",
+        "plt.title(\"DDQN Training Performance\")\n",
+        "plt.show()\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
